# GFX

./: .clang-format  .gitignore  .gitmodules  BUILD_WEB.md  BUILD_WEB_CMAKE.md  CMakeLists.txt  README.md  build_web.sh
.github/workflows/: android.yml  ios.yml  linux.yml  macos.yml  web.yml  windows.yml
examples/: CMakeLists.txt
examples/c/: cube_example.c
examples/c/compute/: README.md  compute_example.c
examples/c/compute/shaders/: fullscreen.vert.wgsl  generate.comp  postprocess.frag  postprocess.frag.wgsl
examples/c/cube/: CubeExample.c  CubeExampleThreaded.c  cube_example.c  cube_example_threaded.c
examples/c/cube/shaders/: cube_textured.frag.wgsl  cube_textured.vert.wgsl
examples/c/shaders/: cube.vert
examples/cpp/: cube_example.cpp
examples/cpp/compute/: compute_example.cpp
examples/cpp/compute/shaders/: fullscreen.vert  generate.comp.wgsl  postprocess.frag
examples/cpp/cube/: CubeExampleThreaded.cpp  cube_example.cpp  cube_example_threaded.cpp
examples/cpp/cube/shaders/: cube.frag.wgsl  cube.vert.wgsl
examples/cpp/shaders/: cube.frag
examples/web/: shell.html
examples/web/cube/: build.sh  cube_example.c  serve.sh
gfx/: GfxApi.h  GfxBackend.h  GfxDispatcher.c  GfxDispatcher.cpp  GfxVulkan.c  GfxVulkan.cpp  GfxWebGPU.c  GfxWebGPU.cpp
gfx/src/: GfxBackend.h  GfxDispatcher.cpp  GfxImpl.cpp  GfxVulkan.cpp  GfxWebGPU.cpp
gfx_cpp/: GfxApi.hpp  GfxApiImpl.cpp
gfx_cpp/src/: Gfx.cpp  GfxApiImpl.cpp  (+1 more)
gfx_cpp_test/: CMakeLists.txt  README.md  basic_test.cpp  instance_test.cpp
gfx_cpp_test/api/: basic_test.cpp  instance_test.cpp  result_test.cpp
gfx_cpp_test/internal/: README.md
gfx_test/: CMakeLists.txt  README.md
gfx_test/api/: BasicTest.cpp
gfx_test/internal/: README.md
scripts/: build_web.sh  cert.pem  https_server.py  key.pem  setup_https.sh
test/gfx/: CMakeLists.txt  README.md
test/gfx/api/: AdapterTest.cpp  BackendTest.cpp  BindGroupLayoutTest.cpp  BindGroupTest.cpp  BufferTest.cpp  CommandEncoderTest.cpp  CommonTest.h  ComputePassEncoderTest.cpp  ComputePipelineTest.cpp  ConstantTest.cpp  DeviceTest.cpp  FenceTest.cpp  FramebufferTest.cpp  InstanceTest.cpp  QuerySetTest.cpp  QueueTest.cpp  RenderPassEncoderTest.cpp  RenderPassTest.cpp  RenderPipelineTest.cpp  SamplerTest.cpp  SemaphoreTest.cpp  ShaderTest.cpp  SurfaceTest.cpp  SwapchainTest.cpp  TextureTest.cpp  TextureViewTest.cpp  UtilTest.cpp
test/gfx/internal/: FactoryTest.cpp  GfxImplTest.cpp  ManagerTest.cpp  README.md
test/gfx/internal/backend/vulkan/converter/: ConversionsTest.cpp
test/gfx/internal/backend/vulkan/core/command/: CommandEncoderTest.cpp  ComputePassEncoderTest.cpp  RenderPassEncoderTest.cpp
test/gfx/internal/backend/vulkan/core/compute/: ComputePipelineTest.cpp
test/gfx/internal/backend/vulkan/core/presentation/: SurfaceTest.cpp  SwapchainTest.cpp
test/gfx/internal/backend/vulkan/core/query/: QuerySetTest.cpp
test/gfx/internal/backend/vulkan/core/render/: FramebufferTest.cpp  RenderPassTest.cpp  RenderPipelineTest.cpp
test/gfx/internal/backend/vulkan/core/resource/: BindGroupLayoutTest.cpp  BindGroupTest.cpp  BufferTest.cpp  SamplerTest.cpp  ShaderTest.cpp  TextureTest.cpp  TextureViewTest.cpp
test/gfx/internal/backend/vulkan/core/sync/: FenceTest.cpp  SemaphoreTest.cpp
test/gfx/internal/backend/vulkan/core/system/: AdapterTest.cpp  DeviceTest.cpp  InstanceTest.cpp  QueueTest.cpp
test/gfx/internal/backend/vulkan/core/util/: CommandExecutorTest.cpp  UtilsTest.cpp
test/gfx/internal/backend/webgpu/converter/: ConversionsTest.cpp
test/gfx/internal/backend/webgpu/core/command/: CommandEncoderTest.cpp  ComputePassEncoderTest.cpp  RenderPassEncoderTest.cpp
test/gfx/internal/backend/webgpu/core/compute/: ComputePipelineTest.cpp
test/gfx/internal/backend/webgpu/core/presentation/: SurfaceTest.cpp  SwapchainTest.cpp
test/gfx/internal/backend/webgpu/core/query/: QuerySetTest.cpp
test/gfx/internal/backend/webgpu/core/render/: FramebufferTest.cpp  RenderPassTest.cpp  RenderPipelineTest.cpp
test/gfx/internal/backend/webgpu/core/resource/: BindGroupLayoutTest.cpp  BindGroupTest.cpp  BufferTest.cpp  SamplerTest.cpp  ShaderTest.cpp  TextureTest.cpp  TextureViewTest.cpp
test/gfx/internal/backend/webgpu/core/sync/: FenceTest.cpp  SemaphoreTest.cpp
test/gfx/internal/backend/webgpu/core/system/: AdapterTest.cpp  DeviceTest.cpp  InstanceTest.cpp  QueueTest.cpp
test/gfx/internal/backend/webgpu/core/util/: BlitTest.cpp  UtilsTest.cpp
test/gfx/internal/common/: LoggerTest.cpp
test/gfx_cpp/: CMakeLists.txt  README.md
test/gfx_cpp/api/: AdapterTest.cpp  BackendTest.cpp  BindGroupLayoutTest.cpp  BindGroupTest.cpp  BufferTest.cpp  CommandEncoderTest.cpp  CommonTest.h  ComputePassEncoderTest.cpp  ComputePipelineTest.cpp  ConstantTest.cpp  DeviceTest.cpp  FenceTest.cpp  FramebufferTest.cpp  InstanceTest.cpp  QuerySetTest.cpp  QueueTest.cpp  RenderPassEncoderTest.cpp  RenderPassTest.cpp  RenderPipelineTest.cpp  SamplerTest.cpp  SemaphoreTest.cpp  ShaderTest.cpp  SurfaceTest.cpp  SwapchainTest.cpp  TextureTest.cpp  TextureViewTest.cpp  UtilTest.cpp
test/gfx_cpp/internal/: GfxImplTest.cpp  README.md
test/gfx_cpp/internal/common/: CommonTest.h
test/gfx_cpp/internal/converter/: ConversionsTest.cpp
test/gfx_cpp/internal/core/command/: CommandEncoderTest.cpp  ComputePassEncoderTest.cpp  RenderPassEncoderTest.cpp
test/gfx_cpp/internal/core/compute/: ComputePipelineTest.cpp
test/gfx_cpp/internal/core/presentation/: SurfaceTest.cpp  SwapchainTest.cpp
test/gfx_cpp/internal/core/query/: QuerySetTest.cpp
test/gfx_cpp/internal/core/render/: FramebufferTest.cpp  RenderPassTest.cpp  RenderPipelineTest.cpp
test/gfx_cpp/internal/core/resource/: BindGroupLayoutTest.cpp  BindGroupTest.cpp  BufferTest.cpp  SamplerTest.cpp  ShaderTest.cpp  TextureTest.cpp  TextureViewTest.cpp
test/gfx_cpp/internal/core/sync/: FenceTest.cpp  SemaphoreTest.cpp
test/gfx_cpp/internal/core/system/: AdapterTest.cpp  DeviceTest.cpp  InstanceTest.cpp  QueueTest.cpp
test/gfx_cpp/internal/core/util/: HandleExtractorTest.cpp  UtilsTest.cpp
web/: index.html
(+293 files in other folders)
